--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
                             <li><a href="#">Partners</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Staff<b class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Login</a></li>
+                                    <li><a href="#">Register</a></li>
+                                </ul>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </nav>
@@ -106,6 +115,75 @@
                 </div>
             </div>
         </div> <!-- //End Carousel -->
+
+        <div class="products">
+            <div class="container">
+                <h1>Our Products</h1>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <a href="#" class="">
+                        <img src="img/savingsaccount.jpg" class="img-responsive">
+                    </a>
+                    <h4>Savings</h4>
+                    <p>
+                        At <b>Flash Sacco</b>, we have a wode range of savings products, which
+                        are tailored to meet a diversified membership needs with an innovative
+                        array of products and services designed to match all our customers ...
+                        <a href="#" class="pull-right btn btn-default">Read More >></a>
+                    </p>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <a href="#" class="">
+                        <img src="img/loan.jpg" class="img-responsive">
+                    </a>
+                    <h4>Loans</h4>
+                    <p>
+                        Our loan products are developed with the customer in mind and
+                        offered at competitive interest rates to guarantee a return on 
+                        investment ...
+                        <a href="#" class="pull-right btn btn-default">Read More >></a>
+                    </p>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                    <a href="#" class="">
+                        <img src="img/savingsaccount.jpg" class="img-responsive">
+                    </a>
+                    <h4>Housing</h4>
+                    <p>
+                        <b>Flash Pamoja Housing Cooperative</b> was formed in 2014 with
+                        its registered offices being at <b>Flash Wanabiashara</b> Sacco
+                        <a href="#" class="pull-right btn btn-default">Read More >></a>
+                    </p>
+                </div>
+                
+            </div>
+        </div> <!-- //End products -->
+
+        <div class="services">
+           <div class="container">
+               <h1>Why You Should Choose Us</h1>
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    <p>
+                        <h3>Unmatched Quality</h3>
+                        We take support one step further by tailoring our replies to suit your knowledge, expectations and personality.
+                    </p>
+                    <p>
+                        <h3>Unmatched Quality</h3>
+                        We take support one step further by tailoring our replies to suit your knowledge, expectations and personality.
+                    </p>
+               </div>
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/1Sbacsl9Cww?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+           </div>
+        </div> <!-- //End services -->
+
+        <hr>
+
+        <footer>
+            
+        </footer>
 
         <!-- JavaScript -->
         <script src="js/jquery-2.1.3-.min.js"></script>
